tests/codegen/fail/interface/trait/missing_transitive_impl.stderr
error[E0080]: evaluation panicked: failed to implement interface `Node2` on `Node3`: missing `impl = ` for transitive interface `Node1` on `Node3`
 --> fail/interface/trait/missing_transitive_impl.rs:8:46
  |
8 | #[graphql_interface(impl = Node1Value, for = Node3Value)]
  |                                              ^^^^^^^^^^ evaluation of `<Node2ValueEnum<Node3ValueEnum> as juniper::marker::IsOutputType<__S>>::mark::_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_transitive_impls` (in Nightly builds, run with -Z macro-backtrace for more info)
